# Ubuntu

./: .gitignore
c++/learn_c++_with_robot_project/: CMakeLists.txt  GoogleTest.cmake
c++/learn_c++_with_robot_project/app/: CMakeLists.txt  main.cpp
c++/learn_c++_with_robot_project/components/: CMakeLists.txt
c++/learn_c++_with_robot_project/components/include/components/: Gripper.hpp  Kinematics.hpp  RobotComponent.hpp  RobotJoint.hpp  TwoLinkArm.hpp
c++/learn_c++_with_robot_project/components/src/: Gripper.cpp  Kinematics.cpp  RobotComponent.cpp  RobotJoint.cpp  TwoLinkArm.cpp
c++/learn_c++_with_robot_project/tests/: CMakeLists.txt  test_kinematics.cpp  test_my_robot.cpp
python/learn_python_with_robot_project/: main.py  requirements.txt
python/learn_python_with_robot_project/components/: component.py  gripper.py  joint.py  kinematics.py  two_link_arm.py  visualizer.py
python/learn_python_with_robot_project/tests/: test_gripper.py  test_joint.py  test_kinematics.py  test_two_link_arm.py
